--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,13 @@
+$h1FontSize: 35px;
+$h2FontSize: 30px;
+$h3FontSize: 20px;
+$defaultFontSize: 16px;
+
+$timelineDefaultBoxSize: 40px;
+$timelineLargeBoxSize: 60px;
+
+$imgSize: 150px;
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -5,10 +15,10 @@
 }
 
 body {
-    font-size: 15px;
-    font-family: "Open Sans", sans-serif;
-    color: #7f8c97;
-    background-color: #e9f0f5;
+    font-size: $defaultFontSize;
+    font-family: SimSun, serif;
+    background-image: url("../img/container_bg.jpeg");
+    background-size: cover;
 }
 
 body, h1, h2, h3, ul, li, p {
@@ -24,31 +34,69 @@ img {
     max-width: 100%;
 }
 
-
 header {
-    background-color: #0c1d27;
+    height: $h1FontSize * 2;
+    background: url("../img/header_bg.png");
+    background-size: cover;
 
     h1 {
-      padding: 1% 0 1% 18%;
-      font-size: 40px;
+      font-size: $h1FontSize;
+      line-height: $h1FontSize * 2;
+      color: #b1cfea;
+
+      span {
+        display: inline-block;
+        cursor: pointer;
+        font-family: KaiTi, serif;
+      }
+
+      span:hover {
+        color: gold;
+      }
+
+      .name {
+        float: left;
+        margin-left: 10%;
+      }
+
+      .title {
+        float: right;
+        margin-right: 12%;
+      }
     }
 }
 
 .intro {
-  margin: 2% 20%;
+  margin: 2% 15%;
 
   h2 {
-    line-height: 50px;
+    line-height: 2;
     text-align: center;
-    font-size: 25px;
+    font-size: $h2FontSize;
     color: #007bc4;
     font-weight: bolder;
   }
 
+  .intro-content {
+    display: flex;
+    flex-direction: column;
+    min-height: $imgSize;
+    align-items: center;
+    justify-content: center;
+  }
+
   p {
+    color: #203f5a;
     text-indent: 1em;
-    line-height: 20px;
-    font-size: 15px;
+    line-height: 2  ;
+    font-size: 20px;
+  }
+
+  .photo {
+    position: relative;
+    width: $imgSize;
+    height: $imgSize;
+    margin: 1em 0;
   }
 }
 
@@ -87,10 +135,10 @@ header {
   margin-bottom: 0;
 }
 
-.timeline-img {
+.timeline-icon {
   position: absolute;
-  width: 40px;
-  height: 40px;
+  width: $timelineDefaultBoxSize;
+  height: $timelineDefaultBoxSize;
   left: -18px;
   border-radius: 50%;
   box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
@@ -100,45 +148,92 @@ header {
     position: relative;
     left: 25%;
     top: 25%;
-    width: 20px;
-    height: 20px;
+    width: $timelineDefaultBoxSize / 2;
+    height: $timelineDefaultBoxSize / 2;
   }
 }
 
-.timeline-img.icon {
-  background: #75ce66;
+.timeline-icon {
+  opacity: 0.8;
 }
 
-.timeline-img.cd-movie {
-  background: #c03b44;
+.timeline-works:first-child .timeline-icon{
+  background: orange;
 }
 
-.timeline-img.cd-location {
-  background: #f0ca45;
+.timeline-works:nth-child(2) .timeline-icon{
+  background: yellow;
+}
+
+.timeline-works:nth-child(3) .timeline-icon{
+  background: lawngreen;
+}
+
+.timeline-works:nth-child(4) .timeline-icon{
+  background: cyan;
+}
+
+.timeline-works:last-child .timeline-icon{
+  background: deepskyblue;
 }
 
 .timeline-content {
   position: relative;
-  display: inline-block;
   margin-left: 10%;
-  background: white;
-  border-radius: 0.25em;
+  background: transparent;
+  border-radius: 0.5em;
+  border: 1px solid deepskyblue;
   padding: 1em;
-  box-shadow: 0 3px 0 #d7e4ed;
 
-  h3 {
-    color: #303e49;
+  .timeline-img {
+    position: relative;
+    float: right;
+    margin: 0.5em;
+    width: 25%;
   }
 
-  p {
-    margin: 1em 0;
-    line-height: 20px;
+  .timeline-img:hover {
+    -webkit-animation: circle 2s infinite linear;
+  }
+
+  @-webkit-keyframes circle {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 
   .date {
-    float: left;
-    padding: .8em 0;
-    opacity: .7;
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    font-family: "Times New Roman", serif;
+    color: blue;
+    opacity: .5;
+  }
+
+  .timeline-desc {
+    line-height: 2;
+    padding-bottom: 10%;
+
+    h3 {
+      display: inline-block;
+      color: #9c60d3;
+      text-indent: 0.5em;
+      font-size: $h3FontSize;
+    }
+
+    p {
+      font-size: $defaultFontSize;
+      color: black;
+      text-indent: 1em;
+    }
+
+    .first-para {
+      display: inline;
+    }
   }
 }
 
@@ -148,11 +243,28 @@ footer {
 
   p {
     font-family: Arial, serif;
-    padding: 20px 0;
+    font-size: $defaultFontSize;
+    color: #978ce6;
+    padding: 25px 0;
+    letter-spacing: 1px;
   }
 }
 
 @media screen and (min-width: 1000px) {
+  .intro {
+    .intro-content {
+      flex-direction: row;
+    }
+
+    p {
+      margin-right: 2%;
+    }
+
+    .photo {
+      order: 2;
+    }
+  }
+
   .container {
     margin-top: 3em;
     margin-bottom: 3em;
@@ -175,21 +287,21 @@ footer {
     margin-bottom: 0;
   }
 
-  .timeline-img {
-    width: 60px;
-    height: 60px;
+  .timeline-icon {
+    width: $timelineLargeBoxSize;
+    height: $timelineLargeBoxSize;
     left: 50%;
     margin-left: -30px;
 
     img {
-      width: 30px;
-      height: 30px;
+      width: $timelineLargeBoxSize / 2;
+      height: $timelineLargeBoxSize / 2;
     }
   }
 
   .timeline-content {
     margin-left: 0;
-    padding: 1.6em;
+    padding: 1em;
     width: 45%;
 
     .date {
@@ -197,6 +309,10 @@ footer {
       width: 100%;
       left: 120%;
       top: 6px;
+    }
+
+    .timeline-desc {
+      padding-bottom: 0;
     }
   }
 
@@ -207,6 +323,23 @@ footer {
       left: auto;
       right: 120%;
       text-align: right;
+    }
+
+    .timeline-img {
+      float: left;
+    }
+  }
+
+  .timeline-works:nth-child(odd) .timeline-img:hover {
+    -webkit-animation: circle_reverse 2s infinite linear;
+  }
+
+  @-webkit-keyframes circle_reverse {
+    0% {
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(0deg);
     }
   }
 
